--- a/Refeitorio/Views/Home/_AdminPendingUsers.cshtml
+++ b/Refeitorio/Views/Home/_AdminPendingUsers.cshtml
@@ -30,6 +30,10 @@ else
 							<input type="hidden" name="id" value="@user.Id" />
 							<button type="submit" class="btn btn-success btn-sm">Aprovar</button>
 						</form>
+						<form asp-action="RejectUser" method="post" style="display:inline">
+							<input type="hidden" name="id" value="@user.Id" />
+							<button type="submit" class="btn btn-danger btn-sm">Rejeitar</button>
+						</form>
 					</td>
 				</tr>
 			}
